--- a/css/sampleForm.css
+++ b/css/sampleForm.css
@@ -63,3 +63,21 @@ error-output
     padding-left: 15px;
     width: 15%;
 }
+@media only screen and (max-width:360px) {
+    h1 
+    {
+        font-size: 40px;
+        text-align: center;
+    }
+    input 
+    {
+        width: 50%;
+        border: 1px solid black
+    }
+    label 
+    {
+        display: inline-block;
+        width: 100px;
+    }
+    
+}
